--- a/scss/layout/_client.scss
+++ b/scss/layout/_client.scss
@@ -1,6 +1,10 @@
-
 .client__item {
-    flex-basis: calc((100% - 150px) / 6);
+    flex-basis: calc((100% - 30px) / 2);
+
+    @media screen and (min-width: 1200px) {
+        flex-basis: calc((100% - 150px) / 6);
+
+    }
 }
 
 .client__link {
