--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,11 +1,18 @@
 .logo {
     font-family: "Raleway";
     font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 1.38;
     letter-spacing: 0.03em;
     color: var(--color-blue);
+    
+@media screen and (min-width: 1200px){
+  
+  font-size: 26px;
+  line-height: 1.19;
+}
+
   }
   
   
