--- a/scss/components/_socials.scss
+++ b/scss/components/_socials.scss
@@ -3,11 +3,9 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
-  }
+}
+
 .social__link {
-    transition-property: background-color;
-    transition-duration: var(--transition-time);
-    transition-timing-function: var(--transition-function);
 
     display: flex;
     align-items: center;
@@ -17,26 +15,40 @@
     background: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
 
+    @media screen and (min-width: 1200px) {
+        transition-property: background-color;
+        transition-duration: var(--transition-time);
+        transition-timing-function: var(--transition-function);
 
-    &:hover,
-    &:focus {
-        background-color: var(--color-blue);
+        &:hover,
+        &:focus {
+            background-color: var(--color-blue);
+        }
+
+        &:hover .social__icon,
+        &:focus .social__icon {
+            fill: var(--color-white);
+        }
+
     }
 
-    &:hover .social__icon,
-    &:focus .social__icon {
-        fill: var(--color-white);
-    }
+
 }
 
 .social__icon {
-    transition-property: fill;
-    transition-duration: var(--transition-time);
-    transition-timing-function: var(--transition-function);
     fill: var(--color-icon-fill);
+
+    @media screen and (min-width: 1200px) {
+        transition-property: fill;
+        transition-duration: var(--transition-time);
+        transition-timing-function: var(--transition-function);
+
+
+    }
+
 }
 
 
 .footer__social-icon {
     fill: var(--color-white);
-  }
+}
