--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -1,5 +1,12 @@
 .aboot {
-  padding-top: 0;
+  display: none;
+
+  @media screen and (min-width: 1200px) {
+
+    padding-top: 0;
+    display: block;
+  }
+
 }
 
 .aboot__item {
