--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,10 +1,20 @@
 .footer {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    background-color: var(--color-background-footer);
+  background-color: var(--color-background-footer);
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+}
+
+.footer-card-cet { display: block;
+  text-align: center;
+ 
+
+
+  @media screen and (min-width: 1200px){
+    
+  display: flex;
+  gap: 70px;
+  align-items: baseline;  
   }
-  .footer-card-cet {
-    display: flex;
-    gap: 70px;
-    align-items: baseline;
-  }
+
+}
