--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -1,28 +1,46 @@
 .team {
-    background-color: var(--color-background-team);
+  background-color: var(--color-background-team);
+}
+
+.team__item {
+  width: 100%;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background-color: var(--color-white);
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 30px) / 2);
   }
-  .team__item {
+
+
+  @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 90px) / 4);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-    background-color: var(--color-white);
   }
-  .team__wrapper {
-    padding-top: 30px;
-    padding-bottom: 30px;
+}
+
+.team__wrapper {
+  padding-top: 30px;
+  padding-bottom: 24px;
+
+  @media screen and (min-width: 1200px) {
+  padding-bottom: 30px;
+}
   }
-  .team__name {
-    margin-bottom: 10px;
-    text-align: center;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    color: var(--color-black);
-  }
-  .team__desc {
-    text-align: center;
-    font-size: 16px;
-    line-height: 1.18;
-    margin-bottom: 16px;
-  }
+  
+
+.team__name {
+  margin-bottom: 10px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  color: var(--color-black);
+}
+
+.team__desc {
+  text-align: center;
+  font-size: 16px;
+  line-height: 1.18;
+  margin-bottom: 16px;
+}
