--- a/css/main.css
+++ b/css/main.css
@@ -516,6 +516,11 @@ section {
   margin-bottom: 20px;
   margin-top: 60px;
 }
+@media screen and (min-width: 768px) {
+  .footer-title {
+    margin-top: 0px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .footer-title {
     margin-top: 0px;
@@ -595,22 +600,29 @@ section {
   fill: var(--color-white);
 }
 
-.footer-form {
-  margin-left: auto;
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    margin-left: auto;
+  }
 }
 
 .fooer-form__set {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 12px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: block;
+}
+@media screen and (min-width: 1200px) {
+  .fooer-form__set {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 12px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .fooer-form__input {
-  width: 358px;
+  width: 100%;
   background-color: transparent;
   border: 1px rgba(255, 255, 255, 0.3) solid;
   border-radius: 4px;
@@ -621,6 +633,12 @@ section {
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 16px;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .fooer-form__input {
+    width: 450px;
+  }
 }
 .fooer-form__input::-webkit-input-placeholder {
   color: rgba(255, 255, 255, 0.6);
@@ -636,6 +654,12 @@ section {
 }
 .fooer-form__input::placeholder {
   color: rgba(255, 255, 255, 0.6);
+}
+@media screen and (min-width: 1200px) {
+  .fooer-form__input {
+    margin-bottom: 0px;
+    width: 358px;
+  }
 }
 
 .backdrop {
@@ -888,10 +912,21 @@ section {
 }
 
 .footer__kontakt-item {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 .footer__kontakt-item:last-child {
   margin-bottom: 0px;
+}
+@media screen and (min-width: 768px) {
+  .footer__kontakt-item:last-child {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__kontakt-item {
+    margin-bottom: 9px;
+    margin-left: 0px;
+  }
 }
 
 .footer__kontakt-link {
@@ -1005,13 +1040,31 @@ section {
 }
 
 .hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(https://raw.githubusercontent.com/Mostenskiy/goit-markup-hw-04/main/imeges/home/Img-hirow.jpg);
-  background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(https://raw.githubusercontent.com/Mostenskiy/goit-markup-hw-04/main/imeges/home/Img-hirow.jpg);
-  background-size: 1600px 600px;
   background-position: center;
   background-repeat: no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/imeges/home/Img-hirow-mob.jpg);
+  background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/imeges/home/Img-hirow-mob.jpg);
+  background-size: 480px 400px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(https://raw.githubusercontent.com/Mostenskiy/goit-markup-hw-04/main/imeges/home/Img-hirow.jpg);
+    background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(https://raw.githubusercontent.com/Mostenskiy/goit-markup-hw-04/main/imeges/home/Img-hirow.jpg);
+    background-size: 1600px 600px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(https://raw.githubusercontent.com/Mostenskiy/goit-markup-hw-04/main/imeges/home/Img-hirow.jpg);
+    background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(https://raw.githubusercontent.com/Mostenskiy/goit-markup-hw-04/main/imeges/home/Img-hirow.jpg);
+    background-size: 1600px 600px;
+  }
 }
 
 .benefits__item {
@@ -1210,15 +1263,41 @@ section {
   display: block;
   text-align: center;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .footer-card-cet {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    gap: 70px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-card-cet {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    text-align: left;
+    gap: 70px;
+  }
+}
+
+.footer__kontakt {
+  margin-right: 0px;
+}
+@media screen and (min-width: 768px) {
+  .footer__kontakt {
+    margin-right: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__kontakt {
+    margin-right: 0px;
   }
 }
 
