--- a/scss/components/_contacts.scss
+++ b/scss/components/_contacts.scss
@@ -33,11 +33,24 @@
 }
 
 .footer__kontakt-item {
-    margin-bottom: 9px;
+    margin-bottom: 8px;
 
     &:last-child {
         margin-bottom: 0px;
     }
+    @media screen and (min-width: 768px){
+       
+        &:last-child {
+            margin-bottom: 60px;
+        }
+  
+    }
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 9px;
+        margin-left: 0px;
+
+    }
+
 }
 
 .footer__kontakt-link {
@@ -51,12 +64,11 @@
     line-height: 1.714;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
-   
-   
-   
+
+
+
     &:hover,
     &:focus {
-    color: var(--color-white);
+        color: var(--color-white);
+    }
 }
-}
-
