--- a/scss/components/_titles.scss
+++ b/scss/components/_titles.scss
@@ -50,6 +50,10 @@
   color: var(--color-white);
   margin-bottom: 20px;
   margin-top: 60px;
+  @media screen and (min-width: 768px){
+
+  margin-top: 0px;
+  }
   
 @media screen and (min-width: 1200px){
   margin-top: 0px;
