--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,16 +5,31 @@
 
 }
 
-.footer-card-cet { display: block;
+.footer-card-cet { 
+  display: block;
   text-align: center;
- 
-
+  @media screen and (min-width: 768px){
+ display: flex;
+ flex-wrap: wrap;
+align-items: baseline;
+justify-content: center;
+  }
 
   @media screen and (min-width: 1200px){
-    
-  display: flex;
+   flex-wrap: nowrap;  
+   text-align: left;
   gap: 70px;
-  align-items: baseline;  
+   
   }
 
 }
+.footer__kontakt {
+  margin-right: 0px;
+  @media screen and (min-width: 768px){
+  margin-right: 165px;}
+  @media screen and (min-width: 1200px){
+  margin-right: 0px;
+   
+  }
+    
+  }
