--- a/css/main.css
+++ b/css/main.css
@@ -1304,8 +1304,8 @@ section {
 }
 @media screen and (min-width: 768px) {
   .hero {
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(imeges/beg/header@1x_t.jpg);
-    background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(imeges/beg/header@1x_t.jpg);
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/imeges/beg/header@1x_t.jpg);
+    background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/imeges/beg/header@1x_t.jpg);
     background-size: 768px 400px;
     background-position: center;
     background-repeat: no-repeat;
