--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -19,7 +19,7 @@
 
   @media screen and (min-width: 768px) {
     background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(imeges/beg/header@1x_t.jpg);
+      url(/imeges/beg/header@1x_t.jpg);
     background-size: 768px 400px;
     background-position: center;
     background-repeat: no-repeat;
