--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -11,7 +11,7 @@
   @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
-    background: url(/imeges/beg/header@2x_m.jpg);
+    background:  linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/imeges/beg/header@2x_m.jpg);
     background-size: 480px 400px;
     background-position: center;
     background-repeat: no-repeat;
@@ -27,7 +27,7 @@
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-      background: url(/imeges/beg/header@2x_t.jpg);
+      background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),  url(/imeges/beg/header@2x_t.jpg);
       background-size: 768px 400px;
       background-position: center;
     background-repeat: no-repeat;
@@ -48,7 +48,7 @@
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-      background: url(/imeges/beg/header@2x_d.jpg);
+      background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/imeges/beg/header@2x_d.jpg);
       background-size: 1600px 600px;background-position: center;
     background-repeat: no-repeat;
 
