--- a/scss/components/_contacts.scss
+++ b/scss/components/_contacts.scss
@@ -69,7 +69,7 @@
         margin-bottom: 0px;
     }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and  (max-width: 1199px){
 
         &:last-child {
             margin-bottom: 60px;
