--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -11,7 +11,8 @@
   width: 768px;
   
 }
-@media screen and (min-width: 1200px){
+@media screen and (min-width: 1200px)
+{
   
    width: 1200px;
 }
