--- a/scss/components/_modal-window.scss
+++ b/scss/components/_modal-window.scss
@@ -18,8 +18,8 @@
     pointer-events: none;
   }
   .modal {
-    width: 450px;
-    height: 609px;
+    max-width: 450px;
+    height: auto;
     border-radius: 4px;
     background-color: #ffffff;
     padding: 40px;
@@ -31,8 +31,8 @@
     transition: transform 500ms ease-in-out 250ms, opacity 500ms ease-in-out 250ms;
         
     @media screen and (min-width: 1200px){
-      width: 528px;
-    height: 581px;
+     max-width: 528px;
+    height: auto;
        
     }
 
