--- a/scss/components/_titles.scss
+++ b/scss/components/_titles.scss
@@ -21,7 +21,7 @@
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 30px;
-  width: 360px;
+  max-width: 360px;
   font-weight: 900;
   font-size: 26px;
   line-height: calc(42 / 26);
@@ -30,19 +30,17 @@
   text-transform: uppercase;
   letter-spacing: 0.06em;
 
-  @media screen and (min-width: 768px){
-  
-  }
-  
-  
-  @media screen and (min-width: 1200px){
-    
-    width: 696px;
+  @media screen and (min-width: 768px) {}
+
+
+  @media screen and (min-width: 1200px) {
+
+    max-width: 696px;
     font-weight: 900;
     font-size: 44px;
-    line-height: 1.36;   
+    line-height: 1.36;
   }
- 
+
 }
 
 .benefits__title {
@@ -53,9 +51,14 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--color-black);
+  text-align: center;
+
+  @media screen and (min-width: 768px) {
+    text-align: left;
+  }
 }
 
-.footer-title { 
+.footer-title {
   display: block;
   font-weight: 700;
   font-size: 14px;
@@ -65,15 +68,16 @@
   color: var(--color-white);
   margin-bottom: 20px;
   margin-top: 60px;
-  @media screen and (min-width: 768px){
 
-  margin-top: 0px;
+  @media screen and (min-width: 768px) {
+
+    margin-top: 0px;
   }
-  
-@media screen and (min-width: 1200px){
-  margin-top: 0px;
-   
-}
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 0px;
+
+  }
 }
 
 
