--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,37 +1,46 @@
 .hero {
 
   background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(/imeges/beg/header@1x_m.jpg);
-  background-size: 480px 400px;
+    url(../imeges/beg/header@1x_m.jpg);
+  height: 400;
+  max-width: 767px;
   padding-top: 118px;
   padding-bottom: 118px;
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
 
   @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
-    background:  linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/imeges/beg/header@2x_m.jpg);
-    background-size: 480px 400px;
+    background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/beg/header@2x_m.jpg);
+
+    max-width: 767px;
+
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
+
   }
 
   @media screen and (min-width: 768px) {
     background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(imeges/beg/header@1x_t.jpg);
-    background-size: 768px 400px;
+      url(..imeges/beg/header@1x_t.jpg);
+    max-width: 1199px;
+
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-      background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),  url(/imeges/beg/header@2x_t.jpg);
-      background-size: 768px 400px;
-      background-position: center;
-    background-repeat: no-repeat;
+      background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/beg/header@2x_t.jpg);
+      max-width: 1199px;
 
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
   }
 
@@ -40,18 +49,24 @@
     padding-top: 200px;
     padding-bottom: 200px;
     background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(/imeges/beg/header@1x_d.jpg);
-    background-size: 1600px 600px;
+      url(../imeges/beg/header@1x_d.jpg);
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-      background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/imeges/beg/header@2x_d.jpg);
-      background-size: 1600px 600px;background-position: center;
-    background-repeat: no-repeat;
-
+      background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/beg/header@2x_d.jpg);
+      max-width: 1600px;
+      margin-left: auto;
+      margin-right: auto;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
   }
 }
