--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -54,7 +54,11 @@
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
             0px 2px 2px rgba(0, 0, 0, 0.12);
     }
-
+    @media screen and (min-width: 768px), (max-width:1199px)
+    {display: flex;
+        flex-direction: column;
+       height: 100%;
+    }
 }
 
 .portfolio__overlay-set {
@@ -98,6 +102,7 @@
     padding-left: 24px;
     padding-right: 24px;
     border: 1px solid var(--color-portfolio-border);
+    flex-grow: 1;
 }
 
 .portfolio__link__title {
