--- a/css/main.css
+++ b/css/main.css
@@ -1505,6 +1505,12 @@ section {
   -ms-flex-preferred-size: calc((100% - 30px) / 2);
       flex-basis: calc((100% - 30px) / 2);
 }
+@media screen and (min-width: 768px) {
+  .client__item {
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
+  }
+}
 @media screen and (min-width: 1200px) {
   .client__item {
     -ms-flex-preferred-size: calc((100% - 150px) / 6);
