--- a/scss/components/_modal-window.scss
+++ b/scss/components/_modal-window.scss
@@ -18,8 +18,10 @@
     pointer-events: none;
   }
   .modal {
-    max-width: 450px;
-    height: auto;
+     @media screen and (min-width: 480px){
+    
+    width: 100%;
+ 
     border-radius: 4px;
     background-color: #ffffff;
     padding: 40px;
@@ -29,9 +31,9 @@
     transform: translate(-50%, -50%) scale(1);
     opacity: 1;
     transition: transform 500ms ease-in-out 250ms, opacity 500ms ease-in-out 250ms;
-        
+     }
     @media screen and (min-width: 1200px){
-     max-width: 528px;
+     width: 528px;
     height: auto;
        
     }
